fix: adjust spacing and title chairman

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -26,9 +26,9 @@ body {
 .section-hero {
 	position: relative;
 	overflow: clip;
-	
+
 	@media (min-width: 1200px) {
-		height: 100vh;
+		padding-bottom: 5rem;
 	}
 
 	p,
@@ -86,6 +86,7 @@ body {
 		@media (min-width: 768px) {
 			align-items: end;
 		}
+
 		@media (min-width: 1024px) {
 			margin-top: 4rem;
 		}
@@ -155,7 +156,7 @@ body {
 			@media (min-width: 1024px) {
 				gap: 16px;
 			}
-			
+
 		}
 
 		.p-steps p {
@@ -191,8 +192,7 @@ body {
 				margin-top: 1.6rem;
 			}
 
-			@media (min-width: 1200px) {
-			}
+			@media (min-width: 1200px) {}
 		}
 	}
 
@@ -1203,6 +1203,7 @@ body {
 			@media (min-width: 400px) {
 				font-size: .9rem;
 			}
+
 			@media (min-width: 420px) {
 				font-size: 1rem;
 			}
@@ -1551,10 +1552,14 @@ body {
 		font-weight: 700;
 		color: #000;
 
-		h1 {
-			background: linear-gradient(270deg, #1B3FC0 13.81%, #1BC0A4 113.15%);
-			-webkit-background-clip: text;
-			-webkit-text-fill-color: transparent;
+		h1, h1 span {
+			color: #000;
+			span {
+				background: linear-gradient(270deg, #1B3FC0 13.81%, #1BC0A4 113.15%);
+				-webkit-background-clip: text;
+				-webkit-text-fill-color: transparent;
+			}
+
 			margin: 0;
 			font-size: 1.4rem;
 			font-weight: 700;
